#17730 closed bug (fixed)
Skylake GT2 no more 1920 x 1080... regression
Reported by: | bruno | Owned by: | rudolfc |
---|---|---|---|
Priority: | high | Milestone: | R1/beta4 |
Component: | Drivers/Graphics/intel_extreme/skylake | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Skylake GT2 Hrev 56087 nightly Haiku 64bit worked nice with 1920 x 1080
Hrev 56093 it is not working anymore! Up to 1600 x 1200 is possible.
At start the screen is offscreen. Have to use the terminal to change the screen size to 1600 x 1200
Screen brightness works nice!
Attachments (5)
Change History (21)
by , 3 years ago
by , 3 years ago
Attachment: | syslog.old added |
---|
by , 3 years ago
Attachment: | screenshot1.png added |
---|
comment:1 by , 3 years ago
comment:2 by , 3 years ago
Hi, thanks for the report. How is the display connected? Is it with UEFI?
comment:3 by , 3 years ago
https://review.haiku-os.org/c/haiku/+/5299
bruno, would you like to check a build with this change before merging?
comment:4 by , 3 years ago
The display is a Laptop-display It is connected with UEFI as Skylake GT2
I do not build Haiku myself How to use the header and the .cpp file then?
Thanks for looking into it What else could you need to investigate?
comment:5 by , 3 years ago
follow-up: 7 comment:6 by , 3 years ago
I merged anyway, please check with hrev56095 or newer. Please also provide a syslog, thanks.
follow-up: 8 comment:7 by , 3 years ago
Replying to korli:
I merged anyway, please check with hrev56095 or newer. Please also provide a syslog, thanks.
Black screen after boot hrev56095
56094 work fine
1920x1080 hdmi cable
device Display controller (VGA compatible controller, VGA controller) [3|0|0]
vendor 8086: Intel Corporation
device 3e92: CoffeeLake-S GT2 [UHD Graphics 630]
comment:8 by , 3 years ago
Replying to kim1963:
Replying to korli:
I merged anyway, please check with hrev56095 or newer. Please also provide a syslog, thanks.
Black screen after boot hrev56095
56094 work fine
1920x1080 hdmi cable
device Display controller (VGA compatible controller, VGA controller) [3|0|0]
vendor 8086: Intel Corporation
device 3e92: CoffeeLake-S GT2 [UHD Graphics 630]
Please submit a bug report with a syslog.
by , 3 years ago
Attachment: | syslog_Bruno 56095 added |
---|
comment:10 by , 3 years ago
Component: | - General → Drivers/Graphics/intel_extreme/skylake |
---|---|
Keywords: | screen prefenences removed |
Owner: | changed from | to
Platform: | x86-64 → All |
Version: | R1/beta3 → R1/Development |
comment:12 by , 3 years ago
After updating to hrev. 56097 everything works for me Ticket can be closed on my side!
comment:13 by , 3 years ago
Milestone: | Unscheduled → R1/beta4 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Very slow booting to desktop!
Will stall at 4.th icon
Haiku 64bit using UEFI UEFI was working with hrev 56087